--- a/Themes/BasicBackground/BasicBackground.css
+++ b/Themes/BasicBackground/BasicBackground.css
@@ -29,7 +29,7 @@
 	--textdarker: 					125,125,125;
 	--textdarkest: 					90,90,90;
 	
-	--background:					url(https://mwittrien.github.io/BetterDiscordAddons/Themes/BasicBackground/_res/background.jpg);
+	--background:					url(https://i.pinimg.com/originals/a6/81/6b/a6816b3c7ac144612bf250dfa7012f0a.jpg);
 	--backgroundposition:			center;
 	--backgroundsize:				cover;
 	--backgroundblur:				unset;
